--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,110 +1,45 @@
-#******************************************************************************#
+# **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: tgogol <marvin@42.fr>                      +#+  +:+       +#+         #
+#    By: nbouchib <nbouchib@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2016/11/27 14:45:40 by tgogol            #+#    #+#              #
-#    Updated: 2016/12/05 22:15:55 by tgogol           ###   ########.fr        #
+#    Created: 2014/11/09 13:03:39 by nbouchib          #+#    #+#              #
+#    Updated: 2014/11/28 15:50:41 by nbouchib         ###   ########.fr        #
 #                                                                              #
-#******************************************************************************#
-
+# **************************************************************************** #
 
 NAME = libft.a
 
-GCC = gcc -Wall -Wextra -Werror
+SRC = ft_atoi.c ft_bzero.c ft_isalnum.c ft_isalpha.c ft_isascii.c \
+	ft_isdigit.c ft_isprint.c ft_lstadd.c ft_lstdel.c ft_lstdelone.c \
+	ft_lstiter.c ft_lstnew.c ft_memalloc.c ft_memccpy.c \
+	ft_memchr.c ft_memcmp.c ft_memcpy.c ft_memdel.c ft_memmove.c ft_memset.c \
+	ft_putchar.c ft_putchar_fd.c ft_putendl.c ft_putendl_fd.c \
+	ft_putnbr.c ft_putnbr_fd.c ft_putstr.c ft_putstr_fd.c ft_strcat.c \
+	ft_strchr.c ft_strclr.c ft_strcmp.c ft_strcpy.c ft_strdel.c ft_strdup.c \
+	ft_strequ.c ft_striter.c ft_striteri.c ft_strlcat.c ft_strlen.c \
+	ft_strmap.c ft_strmapi.c ft_strncat.c ft_strncmp.c ft_strncpy.c \
+	ft_strnequ.c ft_strnew.c ft_strnstr.c ft_strrchr.c ft_strstr.c \
+	ft_strsub.c ft_strtrim.c ft_tolower.c ft_toupper.c
 
-INCLUDES = -I.
+FLAGS = -Wall -Werror -Wextra
 
-OBJECTS = 						\
-			./ft_memset.o		\
-			./ft_bzero.o		\
-			./ft_memcpy.o		\
-			./ft_memccpy.o		\
-			./ft_memmove.o		\
-			./ft_memchr.o		\
-			./ft_memcmp.o		\
-			./ft_strlen.o		\
-			./ft_strdup.o		\
-			./ft_strcpy.o		\
-			./ft_strncpy.o		\
-			./ft_strcat.o		\
-			./ft_strchr.o		\
-			./ft_strrchr.o		\
-			./ft_strstr.o		\
-			./ft_strcmp.o		\
-			./ft_strncmp.o		\
-			./ft_atoi.o			\
-			./ft_isalpha.o		\
-			./ft_isdigit.o		\
-			./ft_isalnum.o		\
-			./ft_isascii.o		\
-			./ft_isprint.o		\
-			./ft_toupper.o		\
-			./ft_tolower.o		\
-			./ft_memalloc.o		\
-			./ft_strnew.o		\
-			./ft_memdel.o		\
-			./ft_strdel.o		\
-			./ft_strclr.o		\
-			./ft_strncat.o		\
-			./ft_striter.o		\
-			./ft_striteri.o		\
-			./ft_strequ.o		\
-			./ft_strnequ.o		\
-			./ft_putchar.o		\
-			./ft_putstr.o		\
-			./ft_putendl.o		\
-			./ft_putchar_fd.o	\
-			./ft_putendl_fd.o	\
-			./ft_putstr_fd.o	\
-			./ft_strmap.o		\
-			./ft_strmapi.o		\
-			./ft_strsub.o		\
-			./ft_strnew.o		\
-			./ft_strjoin.o		\
-			./ft_strtrim.o		\
-			./ft_strnstr.o		\
-			./ft_cntwrd.o		\
-			./ft_strsplit.o		\
-			./ft_strlcat.o		\
-			./ft_putnbr.o		\
-			./ft_putnbr_fd.o	\
-			./ft_itoa.o			\
-			./ft_lstnew.o		\
-			./ft_lstdelone.o	\
-			./ft_lstdel.o		\
-			./ft_lstadd.o		\
-			./ft_lstiter.o		\
-			./ft_lstmap.o		\
-			./ft_lenitoa.o 		\
-			./get_next_line.o 	\
-			./check.o 			\
-			./fill_n_is.o 		\
-			./fill.o 			\
-			./ft_itoa_base.o 	\
-			./ft_printf.o 		\
-			./print_cast_pdi.o 	\
-			./print_char.o 		\
-			./print_prec_flags.o\
-			./print_type_uoxbn.o\
-			./print_width.o 	\
-			./wchar.o 			\
+OBJ = $(SRC:.c=.o)
 
-all : $(NAME)
+all: $(NAME)
 
-$(NAME) : $(OBJECTS)
-	ar rc $(NAME) $(OBJECTS)
-	ranlib $(NAME)
+$(NAME):
+	gcc $(FLAGS) -c $(SRC) -I includes/
+	ar rc libft.a $(OBJ)
 
-%.o : %.c
-	$(GCC) -o $@ -c $< $(INCLUDES)
+clean:
+	rm -rf $(OBJ)
 
-clean :
-	rm -rf $(OBJECTS)
+fclean: clean
+	rm -rf libft.a
 
-fclean : clean
-	rm -rf $(NAME)
+re: fclean all
 
-re : fclean all
+.PHONY: clean fclean
