--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(corewar)
 
 set(CMAKE_C_STANDARD 99)
 
-set(SOURCE_FILES main.c corewar.h ./libft/libft.h op.h fill_bot.c map.c champion.c print_map.c is_reg.c instructs/in_add.c take_arg.c)
+set(SOURCE_FILES main.c corewar.h ./libft/libft.h op.h fill_bot.c map.c
+        champion.c instruct.c sti_ldi.c op.c)
 add_executable(corewar ${SOURCE_FILES})
 target_link_libraries(corewar ${CMAKE_SOURCE_DIR}/libft/libft.a)
